feat: 添加日志配置和 Docker 支持
- 在 application.properties 中添加了环境配置和日志级别设置
- 新增 Dockerfile 用于构建 Docker 镜像
- 更新 HelloController，增加日志记录
- 添加 logback-spring.xml 配置文件，实现日志滚动策略和多环境配置
- 修改 pom.xml，将 lombok 依赖标记为 optional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=dockefiledeploy
 server.port=8080
+# 激活环境：dev, test 或 prod
+spring.profiles.active=dev
+logging.level.root=info
